--- a/demo/index.html
+++ b/demo/index.html
@@ -1,13 +1,12 @@
 <html>
   <head>
-    <title>Router test</title>
+    <title>TypeFunction test</title>
   </head>
   <body>
 
   </body>
   <script type="text/javascript" src="../src/module.js"></script>
   <script type="text/javascript">
-    var kokot = 'jeeej';
     var p = TypeFunction.create(
       ['String', 'Number', 'Function'],
       function(arg1, arg2, arg3) {
@@ -18,6 +17,6 @@
         console.log(arg3);
       }
     );
-    p('och', 123, function(){});
+    p('test', 123, function(){});
   </script>
 </html>
